Antlr-initial/output/AntlrParser.java
// $ANTLR 3.4 A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g 2012-06-24 19:59:38

import java.util.HashMap;
import java.io.BufferedWriter;
import java.io.File;
import java.io.FileWriter;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class AntlrParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NAME", "NCNAME", "NONTERMINAL", "NUMBER", "OPTMAX", "REGEXP", "STRING", "WHITESPACE", "'\"'", "'/>'", "':'", "'<'", "'</>'", "'='", "'>'", "'['", "']'", "'include'", "'xmlns'"
    };

    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int NAME=4;
    public static final int NCNAME=5;
    public static final int NONTERMINAL=6;
    public static final int NUMBER=7;
    public static final int OPTMAX=8;
    public static final int REGEXP=9;
    public static final int STRING=10;
    public static final int WHITESPACE=11;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AntlrParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AntlrParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AntlrParser.tokenNames; }
    public String getGrammarFileName() { return "A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g"; }


    /** Map variable name to Integer object holding value */
    //HashMap memory = new HashMap();
    /*try{
    FileWriter opFile = new FileWriter("\\A:\\MyWorkspace\\Project\\Antlr\\src\\fileconversion\\ObjIntersectOfGrammar.g");
    BufferedWriter out = new BufferedWriter(opFile);
    catch[IOException e]{throws e;}*/



    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:31:1: prog : () ;
    public final AntlrParser.prog_return prog() throws RecognitionException {
        AntlrParser.prog_return retval = new AntlrParser.prog_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:31:6: ( () )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:31:8: ()
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:31:8: ()
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:34:18: 
            {
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stat"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:35:1: stat : includes namespaceDecls regexpDefs productions ;
    public final AntlrParser.stat_return stat() throws RecognitionException {
        AntlrParser.stat_return retval = new AntlrParser.stat_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.includes_return includes1 =null;

        AntlrParser.namespaceDecls_return namespaceDecls2 =null;

        AntlrParser.regexpDefs_return regexpDefs3 =null;

        AntlrParser.productions_return productions4 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:35:6: ( includes namespaceDecls regexpDefs productions )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:35:8: includes namespaceDecls regexpDefs productions
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_includes_in_stat72);
            includes1=includes();

            state._fsp--;

            adaptor.addChild(root_0, includes1.getTree());

            pushFollow(FOLLOW_namespaceDecls_in_stat74);
            namespaceDecls2=namespaceDecls();

            state._fsp--;

            adaptor.addChild(root_0, namespaceDecls2.getTree());

            pushFollow(FOLLOW_regexpDefs_in_stat76);
            regexpDefs3=regexpDefs();

            state._fsp--;

            adaptor.addChild(root_0, regexpDefs3.getTree());

            pushFollow(FOLLOW_productions_in_stat78);
            productions4=productions();

            state._fsp--;

            adaptor.addChild(root_0, productions4.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stat"


    public static class includes_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "includes"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:36:1: includes : ( include )* ;
    public final AntlrParser.includes_return includes() throws RecognitionException {
        AntlrParser.includes_return retval = new AntlrParser.includes_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.include_return include5 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:36:9: ( ( include )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:36:11: ( include )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:36:11: ( include )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==21) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:36:11: include
            	    {
            	    pushFollow(FOLLOW_include_in_includes85);
            	    include5=include();

            	    state._fsp--;

            	    adaptor.addChild(root_0, include5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "includes"


    public static class include_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "include"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:39:1: include : 'include' '\"' '\"' ;
    public final AntlrParser.include_return include() throws RecognitionException {
        AntlrParser.include_return retval = new AntlrParser.include_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal6=null;
        Token char_literal7=null;
        Token char_literal8=null;

        CommonTree string_literal6_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree char_literal8_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:39:9: ( 'include' '\"' '\"' )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:39:11: 'include' '\"' '\"'
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal6=(Token)match(input,21,FOLLOW_21_in_include103); 
            string_literal6_tree = 
            (CommonTree)adaptor.create(string_literal6)
            ;
            adaptor.addChild(root_0, string_literal6_tree);


            char_literal7=(Token)match(input,12,FOLLOW_12_in_include105); 
            char_literal7_tree = 
            (CommonTree)adaptor.create(char_literal7)
            ;
            adaptor.addChild(root_0, char_literal7_tree);


            char_literal8=(Token)match(input,12,FOLLOW_12_in_include107); 
            char_literal8_tree = 
            (CommonTree)adaptor.create(char_literal8)
            ;
            adaptor.addChild(root_0, char_literal8_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "include"


    public static class namespaceDecls_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "namespaceDecls"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:42:1: namespaceDecls : ( namespaceDecl )* ;
    public final AntlrParser.namespaceDecls_return namespaceDecls() throws RecognitionException {
        AntlrParser.namespaceDecls_return retval = new AntlrParser.namespaceDecls_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.namespaceDecl_return namespaceDecl9 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:42:15: ( ( namespaceDecl )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:42:17: ( namespaceDecl )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:42:17: ( namespaceDecl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==22) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:42:17: namespaceDecl
            	    {
            	    pushFollow(FOLLOW_namespaceDecl_in_namespaceDecls115);
            	    namespaceDecl9=namespaceDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, namespaceDecl9.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "namespaceDecls"


    public static class namespaceDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "namespaceDecl"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:46:1: namespaceDecl : 'xmlns' '=' '\"' '\"' ;
    public final AntlrParser.namespaceDecl_return namespaceDecl() throws RecognitionException {
        AntlrParser.namespaceDecl_return retval = new AntlrParser.namespaceDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal10=null;
        Token char_literal11=null;
        Token char_literal12=null;
        Token char_literal13=null;

        CommonTree string_literal10_tree=null;
        CommonTree char_literal11_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal13_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:46:15: ( 'xmlns' '=' '\"' '\"' )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:46:17: 'xmlns' '=' '\"' '\"'
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal10=(Token)match(input,22,FOLLOW_22_in_namespaceDecl136); 
            string_literal10_tree = 
            (CommonTree)adaptor.create(string_literal10)
            ;
            adaptor.addChild(root_0, string_literal10_tree);


            char_literal11=(Token)match(input,17,FOLLOW_17_in_namespaceDecl138); 
            char_literal11_tree = 
            (CommonTree)adaptor.create(char_literal11)
            ;
            adaptor.addChild(root_0, char_literal11_tree);


            char_literal12=(Token)match(input,12,FOLLOW_12_in_namespaceDecl140); 
            char_literal12_tree = 
            (CommonTree)adaptor.create(char_literal12)
            ;
            adaptor.addChild(root_0, char_literal12_tree);


            char_literal13=(Token)match(input,12,FOLLOW_12_in_namespaceDecl142); 
            char_literal13_tree = 
            (CommonTree)adaptor.create(char_literal13)
            ;
            adaptor.addChild(root_0, char_literal13_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "namespaceDecl"


    public static class regexpDefs_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "regexpDefs"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:49:1: regexpDefs : ( regexpDef )* ;
    public final AntlrParser.regexpDefs_return regexpDefs() throws RecognitionException {
        AntlrParser.regexpDefs_return retval = new AntlrParser.regexpDefs_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.regexpDef_return regexpDef14 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:49:13: ( ( regexpDef )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:49:15: ( regexpDef )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:49:15: ( regexpDef )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==REGEXP) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:49:15: regexpDef
            	    {
            	    pushFollow(FOLLOW_regexpDef_in_regexpDefs152);
            	    regexpDef14=regexpDef();

            	    state._fsp--;

            	    adaptor.addChild(root_0, regexpDef14.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "regexpDefs"


    public static class regexpDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "regexpDef"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:53:1: regexpDef : REGEXP '=' REGEXP OPTMAX ;
    public final AntlrParser.regexpDef_return regexpDef() throws RecognitionException {
        AntlrParser.regexpDef_return retval = new AntlrParser.regexpDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token REGEXP15=null;
        Token char_literal16=null;
        Token REGEXP17=null;
        Token OPTMAX18=null;

        CommonTree REGEXP15_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree REGEXP17_tree=null;
        CommonTree OPTMAX18_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:53:11: ( REGEXP '=' REGEXP OPTMAX )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:53:13: REGEXP '=' REGEXP OPTMAX
            {
            root_0 = (CommonTree)adaptor.nil();


            REGEXP15=(Token)match(input,REGEXP,FOLLOW_REGEXP_in_regexpDef181); 
            REGEXP15_tree = 
            (CommonTree)adaptor.create(REGEXP15)
            ;
            adaptor.addChild(root_0, REGEXP15_tree);


            char_literal16=(Token)match(input,17,FOLLOW_17_in_regexpDef184); 
            char_literal16_tree = 
            (CommonTree)adaptor.create(char_literal16)
            ;
            adaptor.addChild(root_0, char_literal16_tree);


            REGEXP17=(Token)match(input,REGEXP,FOLLOW_REGEXP_in_regexpDef187); 
            REGEXP17_tree = 
            (CommonTree)adaptor.create(REGEXP17)
            ;
            adaptor.addChild(root_0, REGEXP17_tree);


            OPTMAX18=(Token)match(input,OPTMAX,FOLLOW_OPTMAX_in_regexpDef193); 
            OPTMAX18_tree = 
            (CommonTree)adaptor.create(OPTMAX18)
            ;
            adaptor.addChild(root_0, OPTMAX18_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "regexpDef"


    public static class productions_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "productions"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:61:1: productions : ( production )* ;
    public final AntlrParser.productions_return productions() throws RecognitionException {
        AntlrParser.productions_return retval = new AntlrParser.productions_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.production_return production19 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:61:13: ( ( production )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:61:15: ( production )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:61:15: ( production )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==NONTERMINAL) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:61:15: production
            	    {
            	    pushFollow(FOLLOW_production_in_productions204);
            	    production19=production();

            	    state._fsp--;

            	    adaptor.addChild(root_0, production19.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "productions"


    public static class production_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "production"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:65:1: production : optNonterminal ':' leftItems rightItems ;
    public final AntlrParser.production_return production() throws RecognitionException {
        AntlrParser.production_return retval = new AntlrParser.production_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal21=null;
        AntlrParser.optNonterminal_return optNonterminal20 =null;

        AntlrParser.leftItems_return leftItems22 =null;

        AntlrParser.rightItems_return rightItems23 =null;


        CommonTree char_literal21_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:65:12: ( optNonterminal ':' leftItems rightItems )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:65:14: optNonterminal ':' leftItems rightItems
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_optNonterminal_in_production251);
            optNonterminal20=optNonterminal();

            state._fsp--;

            adaptor.addChild(root_0, optNonterminal20.getTree());

            char_literal21=(Token)match(input,14,FOLLOW_14_in_production253); 
            char_literal21_tree = 
            (CommonTree)adaptor.create(char_literal21)
            ;
            adaptor.addChild(root_0, char_literal21_tree);


            pushFollow(FOLLOW_leftItems_in_production255);
            leftItems22=leftItems();

            state._fsp--;

            adaptor.addChild(root_0, leftItems22.getTree());

            pushFollow(FOLLOW_rightItems_in_production257);
            rightItems23=rightItems();

            state._fsp--;

            adaptor.addChild(root_0, rightItems23.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "production"


    public static class optNonterminal_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "optNonterminal"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:68:1: optNonterminal : NONTERMINAL ;
    public final AntlrParser.optNonterminal_return optNonterminal() throws RecognitionException {
        AntlrParser.optNonterminal_return retval = new AntlrParser.optNonterminal_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NONTERMINAL24=null;

        CommonTree NONTERMINAL24_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:68:16: ( NONTERMINAL )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:68:18: NONTERMINAL
            {
            root_0 = (CommonTree)adaptor.nil();


            NONTERMINAL24=(Token)match(input,NONTERMINAL,FOLLOW_NONTERMINAL_in_optNonterminal268); 
            NONTERMINAL24_tree = 
            (CommonTree)adaptor.create(NONTERMINAL24)
            ;
            adaptor.addChild(root_0, NONTERMINAL24_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "optNonterminal"


    public static class leftItems_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "leftItems"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:71:2: leftItems : ( leftItem )* ;
    public final AntlrParser.leftItems_return leftItems() throws RecognitionException {
        AntlrParser.leftItems_return retval = new AntlrParser.leftItems_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AntlrParser.leftItem_return leftItem25 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:71:12: ( ( leftItem )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:71:14: ( leftItem )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:71:14: ( leftItem )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==19) ) {
                    int LA5_1 = input.LA(2);

                    if ( (LA5_1==NONTERMINAL) ) {
                        int LA5_4 = input.LA(3);

                        if ( (LA5_4==NAME) ) {
                            int LA5_7 = input.LA(4);

                            if ( (LA5_7==20) ) {
                                alt5=1;
                            }


                        }
                        else if ( (LA5_4==12) ) {
                            int LA5_8 = input.LA(4);

                            if ( (LA5_8==STRING) ) {
                                int LA5_13 = input.LA(5);

                                if ( (LA5_13==12) ) {
                                    int LA5_16 = input.LA(6);

                                    if ( (LA5_16==20) ) {
                                        alt5=1;
                                    }


                                }


                            }


                        }


                    }
                    else if ( (LA5_1==REGEXP) ) {
                        int LA5_5 = input.LA(3);

                        if ( (LA5_5==NAME) ) {
                            int LA5_9 = input.LA(4);

                            if ( (LA5_9==20) ) {
                                alt5=1;
                            }


                        }
                        else if ( (LA5_5==12) ) {
                            int LA5_10 = input.LA(4);

                            if ( (LA5_10==STRING) ) {
                                int LA5_15 = input.LA(5);

                                if ( (LA5_15==12) ) {
                                    int LA5_17 = input.LA(6);

                                    if ( (LA5_17==20) ) {
                                        alt5=1;
                                    }


                                }


                            }


                        }


                    }


                }
                else if ( (LA5_0==12) ) {
                    int LA5_2 = input.LA(2);

                    if ( (LA5_2==STRING) ) {
                        int LA5_6 = input.LA(3);

                        if ( (LA5_6==12) ) {
                            alt5=1;
                        }


                    }


                }


                switch (alt5) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:71:14: leftItem
            	    {
            	    pushFollow(FOLLOW_leftItem_in_leftItems307);
            	    leftItem25=leftItem();

            	    state._fsp--;

            	    adaptor.addChild(root_0, leftItem25.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "leftItems"


    public static class rightItems_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "rightItems"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial\\Antlr.g:74:1: rightItems : ( rightItem )* ;
    public final AntlrParser.rightItems_return rightItems() throws RecognitionException {
        AntlrParser.rightItems_return retval = new AntlrParser.rightItems_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;
